Bug 1217190 - Make PrintingParent return an nsresult when attempting to show print progress. r=bobowen

--HG--
extra : commitid : LH8E3YSVlSd
extra : rebase_source : a48a93195c576648f4a46c9eb60756186684e0eb
extra : histedit_source : f582237e3e58d92a1ec38a4b2a82d77bae620d48